--- a/index.html
+++ b/index.html
@@ -4,17 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blank Background</title>
+    <title>Christina Unkenholz Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: #1C2E4A;
             margin: 0;
             padding: 0;
+            font-family: 'Open Sans', sans-serif;
+            color: white;
+            overflow-x: hidden;
+        }
+
+        .header {
+            display: flex;
+            padding: 2vw;
+            flex-wrap: wrap;
+            max-width: 90vw;
+        }
+
+        .headshot img {
+            width: 25vw;
+            height: auto;
+            top: 40px;
+            left: 40px;
+            max-width: 325px;
+        }
+
+        .name {
+            font-size: 4.5vw;
+            margin-left: 7vw;
+            font-weight: bold;
+            white-space: nowrap;
+            max-width: 70vw;
+        }
+
+        .icons {
+            display: flex;
+            margin-left: 7vw;
+            margin-top: 2vw;
+        }
+
+        .icons img {
+            width: 5vw;
+            height: auto;
+            margin-right: 3vw;
         }
     </style>
 </head>
 
 <body>
+    <div class="header">
+        <div class="headshot">
+            <img src="headshot.jpg">
+        </div>
+        <div>
+            <div class="name">Christina Unkenholz</div>
+
+            <div class="icons">
+                <a href="https://github.com/ccorinneu1" target="_blank">
+                    <img src="github.png">
+                </a>
+                <a href="https://www.linkedin.com/in/christina-unkenholz/" target="_blank">
+                    <img src="linkedin.png">
+                </a>
+                <img src="resume.png">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
