--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
         .header {
             display: flex;
-            padding: 2vw;
+            padding: 1rem 2vw;
             flex-wrap: wrap;
             max-width: 90vw;
             align-items: center;
+            gap: 1rem;
         }
 
         .headshot img {
@@ -33,8 +34,8 @@
         }
 
         .name {
-            font-size: 4.5vw;
-            margin-left: 7vw;
+            font-size: clamp(0.1rem, 4.5vw, 3rem);
+            margin-left: 3rem;
             font-weight: bold;
             white-space: nowrap;
             max-width: 70vw;
@@ -42,19 +43,41 @@
 
         .icons {
             display: flex;
-            margin-left: 7vw;
-            margin-top: 2vw;
+            margin-top: 1rem;
+            gap: 1.5rem;
+            margin-left: 3rem;
         }
 
         .icons img {
-            width: 5vw;
+            width: clamp(0.1rem, 4.5vw, 4rem);
             height: auto;
-            margin-right: 3vw;
+            margin-right: 0.5rem;
+        }
+
+        .about-section {
+            text-align: left;
+            margin-top: 2rem;
+            margin-left: 2vw;
+        }
+
+        .about-title {
+            font-size: clamp(0.1rem, 3vw, 2rem);
+            font-weight: bold;
+            color: white;
+            margin: 0;
+        }
+
+        .about-text {
+            font-size: clamp(0.1rem, 1.8vw, 1.4rem);
+            color: #D3D3D3;
+            max-width: 95%;
+            line-height: 1.6;
+            margin-top: 1rem;
         }
 
         nav {
             background-color: #243B55;
-            padding: 1vw 2vw;
+            padding: clamp(0.1rem, 2vw, 0.5rem);
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -76,7 +99,7 @@
         nav ul li a {
             text-decoration: none;
             color: white;
-            font-size: 2vw;
+            font-size: clamp(0.1rem, 2vw, 1.5rem);
             font-weight: bold;
             transition: color 0.3s ease;
         }
@@ -113,11 +136,25 @@
                 <a href="https://www.linkedin.com/in/christina-unkenholz/" target="_blank">
                     <img src="linkedin.png">
                 </a>
-                <a href="https://ccorinneu1.github.io/Unkenholz_Christina_Resume.pdf"
-                    download="Unkenholz_Christina_Resume.pdf">
+                <!-- <a href="https://raw.githubusercontent.com/ccorinneu1/ccorinneu1.github.io/main/Unkenholz_Christina_Resume.pdf" -->
+                <!-- <a href="Unkenholz_Christina_Resume.pdf" target="_blank" download="Unkenholz_Christina_Resume.pdf"> -->
+                <a href="Unkenholz_Christina_Resume.pdf" target="_blank">
                     <img src="resume.png">
                 </a>
             </div>
+        </div>
+    </div>
+
+    <div class="about-section">
+        <div class="about-title"> About Me</div>
+        <div class="about-text"> Hi! I'm Christina Unkenholz, a senior at Cornell University majoring in Computer
+            Science
+            with a minor in Information Science. I’m passionate about leveraging technology to solve complex challenges,
+            whether through data analysis, machine learning, or software development. With experience in building
+            predictive models and developing web applications, I bring strong analytical skills, technical expertise,
+            and a commitment to delivering innovative solutions. Outside of work, I enjoy traveling to new places,
+            finding new hiking trails, and discovering new music. I'm looking for opportunities where I can apply my
+            skills to make an impact and continue growing as a developer in a dynamic and collaborative environment.
         </div>
     </div>
 </body>
