--- a/work_experience.html
+++ b/work_experience.html
@@ -18,7 +18,7 @@
 
         nav {
             background-color: #243B55;
-            padding: 1vw 2vw;
+            padding: clamp(0.1rem, 2vw, 0.5rem);
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -40,7 +40,7 @@
         nav ul li a {
             text-decoration: none;
             color: white;
-            font-size: 2vw;
+            font-size: clamp(0.1rem, 2vw, 1.5rem);
             font-weight: bold;
             transition: color 0.3s ease;
         }
