Completed work experience section

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -16,6 +16,14 @@
             overflow-x: hidden;
         }
 
+        .projects-title {
+            margin-left: 2rem;
+            margin-top: 2rem;
+            font-size: clamp(0.1rem, 3.4vw, 2rem);
+            font-weight: bold;
+            color: white;
+        }
+
         nav {
             background-color: #243B55;
             padding: clamp(0.1rem, 2vw, 0.5rem);
@@ -57,11 +65,12 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="work_experience.html">Work Experience</a></li>
-            <li><a href="education.html">Education</a></li>
             <li><a href="extracurriculars.html">Extracurriculars/Leadership</a></li>
             <li><a href="awards.html">Awards</a></li>
         </ul>
     </nav>
+
+    <div class="projects-title">Extracurriculars/Leadership</div>
 </body>
 
 </html>
