--- a/projects.html
+++ b/projects.html
@@ -203,13 +203,12 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="work_experience.html">Work Experience</a></li>
-            <li><a href="education.html">Education</a></li>
             <li><a href="extracurriculars.html">Extracurriculars/Leadership</a></li>
             <li><a href="awards.html">Awards</a></li>
         </ul>
     </nav>
 
-    <div class="projects-title"> Projects</div>
+    <div class="projects-title">Projects</div>
 
     <div class="projects-container">
         <div class="project-box" id="project1" onclick="showPopup('popup1')">
@@ -233,10 +232,9 @@
                 <p>PlateDate is a dynamic web platform designed to help users effortlessly discover recipes tailored to
                     group preferences, making meal planning collaborative and enjoyable. The platform allows multiple
                     users to input their dietary preferences, restrictions, and favorite ingredients or dishes,
-                    generating
-                    a personalized set of recipe recommendations that satisfy everyone in the group.
+                    generating a personalized set of recipe recommendations that satisfy everyone in the group.</p>
 
-                    The front-end features a responsive design built with JavaScript, HTML, and CSS, ensuring a
+                <p>The front-end features a responsive design built with JavaScript, HTML, and CSS, ensuring a
                     seamless user experience. Advanced natural language processing (NLP) techniques were applied to
                     analyze and retrieve over 500,000 recipes from a diverse database. Users can further refine results
                     by sorting recipes based on preparation/cooking time as well as by user ratings, enhancing
@@ -279,15 +277,15 @@
                 <p>Phylogenetic Hidden Markov Model is a computational biology project that leverages Hidden Markov
                     Models (HMMs) and phylogenetic analysis to identify conserved DNA regions across different species.
                     These conserved regions often indicate biologically significant sequences that have been preserved
-                    through evolution due to their critical functional roles.
+                    through evolution due to their critical functional roles.</p>
 
-                    The project involved implementing dynamic programming algorithms to efficiently process genomic data
+                <p>The project involved implementing dynamic programming algorithms to efficiently process genomic data
                     and identify patterns of conservation. By integrating phylogenetic trees, the model accounted for
                     the evolutionary relationships between species, enabling a more nuanced understanding of sequence
                     conservation. This approach provided insights into how selective pressures shape genomes and
-                    revealed potential areas for further study in functional genomics.
+                    revealed potential areas for further study in functional genomics.</p>
 
-                    Advanced computational biology techniques, such as multiple sequence alignment and probabilistic
+                <p>Advanced computational biology techniques, such as multiple sequence alignment and probabilistic
                     modeling, were applied to handle the complexities of genomic data. The results demonstrated how the
                     combination of HMMs and phylogenetic analysis can uncover evolutionary patterns that are not easily
                     detectable with traditional methods.</p>
@@ -299,17 +297,15 @@
                     responsibilities included implementing dynamic programming algorithms to efficiently identify
                     conserved DNA regions and integrating phylogenetic trees into the analysis to account for
                     evolutionary relationships between species. Additionally, I worked on refining the Hidden Markov
-                    Model parameters to improve the accuracy of the predictions.
+                    Model parameters to improve the accuracy of the predictions.</p>
 
-                    As a team, we divided tasks based on our areas of expertise. I collaborated closely with one
+                <p>As a team, we divided tasks based on our areas of expertise. I collaborated closely with one
                     teammate, who focused on preprocessing genomic datasets and building the phylogenetic trees, and
                     another who worked on visualizing the results and summarizing biological insights. We used GitHub
                     for version control, ensuring seamless integration of code, and held regular meetings to align on
-                    objectives and address challenges.
-
-                    This collaborative workflow allowed us to combine our strengths effectively, resulting in a robust
+                    objectives and address challenges. This collaborative workflow allowed us to combine our strengths
+                    effectively, resulting in a robust
                     model that demonstrated how computational methods could reveal significant evolutionary patterns.
-                </p>
             </div>
             <div class="popup-section">
                 <h3>Languages & Frameworks</h3>
